# CamU-OpenGL

./: CMakeLists.txt  CMakePresets.json  README.md
include/: camera.h
include/glad/: glad.h
src/: camera.cpp  glad.c  main.cpp  shader.frag  shader.vert
